--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
+		  "illuminate/html": "5.*",
 		    "predis/predis": "~1.1@dev"
 	},
 	"require-dev": {
